<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Android_clientActivity!</string>
    <string name="app_name">Android_client</string>
    <string name="register_title">Register</string>
    <string name="register_email">E-mail:</string>
    <string name="register_nickname">Username:</string>
    <string name="register_password">Password:</string>
    <string name="register_sex">Sex:</string>
    <string name="register_phone">Phone:</string>
    <string name="register_name">Full Name:</string>
    <string name="register_address">Address:</string>
    <string name="register_birthday">Date of Birth:</string>
    <string name="register_check">I agree to the terms of use  agreement</string>
    <string name="register_button">Create  Account</string>
    <string name="login_username">Username (or e-mail):</string>
    <string name="login_password">Password:</string>
    <string name="login_register">Register</string>
    <string name="login_login">Login</string>
    <string name="exit">Bạn có muốn thoát khỏi chương trình?</string>
    <string name="about_school">Trường Đại Học Công Nghệ Thông Tin</string>
    <string name="about_doan">Luận văn:</string>
    <string name="about_name">Xây dựng ứng dụng thương mại điện tử trên nền tảng điện toán đám mây và Android.</string>
    <string name="about_ownera">Nguyễn Thanh Phong 07520440</string>
    <string name="about_ownerb">Nguyễn Thị Thúy         07520349</string>
    <string name="about_teachera">Ths.Phạm Thi Vương</string>
    <string name="about_teacherb">Ths.Lê Ngọc Thạch</string>
    <string name="about_khoa">Khoa Mạng Máy Tính &amp; Truyền Thông</string>
    <string name="account_add_title">Nạp Xu</string>
    <string name="account_add_ok">Nạp Xu</string>
    <string name="menu_search">Saved searches</string>
    <string name="menu_favorite">Favourite</string>
    <string name="menu_reminder">Reminders</string>
    <string name="menu_message">Messages</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_account">My account</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_DEAL">Top Deals</string>
    <string name="menu_best">Best Sellers</string>
    <string name="menu_browser">Browse</string>
    <string name="account_transfer_title">Chuyển tài khoản Xu</string>
    <string name="account_transfer_ok">Đồng ý chuyển khoản</string>
    <string name="account_transfer_owner">Tài khoản của bạn:</string>
    <string name="account_transfer_user">Tài khoản muốn chuyển Xu</string>
    <string name="account_transfer_number">Số lượng Xu muốn chuyển</string>
    <string name="menu_home">Home</string>
    <string name="payment_content_title">Payment</string>
    <string name="payment_content_add">Nạp Xu</string>
    <string name="payment_content_transfer">Chuyển tài khoản Xu</string>
    <string name="myaccount_title">My Account</string>
    <string name="myaccount_info">Thông tin tài khoản</string>
    <string name="myaccount_changepass">Thay đổi mật khẩu</string>
    <string name="myaccount_payment">Thanh toán Xu</string>
    <string name="myaccount_history">Lịch sử mua hàng</string>
    <string name="myaccount_order">Đặt hàng </string>
    <string name="accountinfo_title">Thông tin tài khoản</string>
    <string name="accountinfo_taba">Thông tin cơ bản:</string>
    <string name="accountinfo_tabb">Thông tin chi tiết:</string>
    <string name="accountinfo_titleb">Thông tin chi tiết:</string>
    <string name="accountinfo_update">Sửa thông tin</string>
    <string name="menu_login">Login</string>
    <string name="favourite_title">Favourite</string>
    <string name="item">items</string>
    <string name="favourite_advance_a">Advanced</string>
    <string name="favourite_advance_b">Update</string>
    <string name="settings_titlebar">Show title bar</string>
    <string name="settings_volume">Sound volume</string>
    <string name="settings_category_caidatchung">Application setting</string>
    <string name="settings_category_network">Network setting</string>
    <string name="settings_server">Address server</string>
    <string name="settings_serveroff">Enable application offline</string>
    <string name="settings_history">Clear history</string>
    <string name="settings_maximum">Maximum save items</string>
    <string name="setting_reminder">Enable reminder</string>
    <string name="settings_category_user">User Setting</string>
    <string name="menu_successful">Login successful !</string>
    <string name="menu_fail">Please check username or password !</string>
    <string name="login_showpass">Show password</string>
    <string name="menu_waiting">please wait...</string>
    <string name="register_statusa">Register successful!</string>
    <string name="register_statusb">Please item !</string>
    <string name="deals_price">Price </string>
    <string name="deals_sale">Sale </string>
    <string name="vnd"> vnđ</string>
    <string name="buyer">buyer</string>
    <string name="add_xu_true">Successful!</string>
    <string name="add_xu_fasle">Productkey not correct!</string>
    <string name="add_xu_addproductkey">Please enter productkey!</string>
    <string name="transfer_xu_status">please  enter information!</string>
    <string name="transfer_successful">Transfer successful!</string>
    <string name="transfer_enough_xu">You are not enough xu!</string>
    <string name="transfer_username">Username transfer not exist!</string>
    <string name="transfer_not_successful">Transfer not successful!</string>
    <string name="menu_logout">Logout</string>
    <string name="provider">Id Store:</string>
    <string name="tab_browser_save">Save</string>
    <string name="saved_date">Saved date:</string>
    <string name="detail_food">Detail Food</string>
    <string name="changepass_oldpass">Old password:</string>
    <string name="changepass_new">New password:</string>
    <string name="changepass_confirm">Confirm password:</string>
    <string name="ok">Ok</string>
    <string name="accountchange_true">Change password successful!</string>
    <string name="accountchange_false">Change password not successful!</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="introduction">Introduction:</string>
    <string name="cooking">Cooking:</string>
    <string name="linkserver">URL Server</string>
</resources>
