<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:background="@color/white_smoke"
	android:minWidth="800dp" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:id="@+id/linearLayout1"
		android:background="@drawable/theme_activity_title_bar"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_gravity="center_vertical" android:gravity="center_vertical">
		<ImageView android:layout_width="wrap_content"
			android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
			android:layout_height="wrap_content" android:id="@+id/imageView1"
			android:src="@drawable/deals_ebay_us"></ImageView>
		<TextView android:id="@+id/textView1" android:textStyle="bold"
			android:textSize="16dp" android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_height="wrap_content" android:text="@string/login_login"
			android:textColor="@color/white" android:layout_width="wrap_content"></TextView>
	</LinearLayout>
	<LinearLayout android:id="@+id/linearLayout2"
		android:layout_width="fill_parent" android:layout_marginLeft="20dp"
		android:layout_marginTop="10dp" android:layout_marginRight="20dp"
		android:layout_height="wrap_content" android:orientation="vertical">
		<TextView android:layout_width="wrap_content"
			android:textSize="16dp" android:textColor="@color/black"
			android:layout_height="wrap_content" android:id="@+id/textView1"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/login_username"></TextView>
		<EditText android:layout_width="fill_parent"
			android:background="@drawable/search_box" android:paddingLeft="10dp"
			android:paddingRight="10dp" android:layout_height="wrap_content"
			android:id="@+id/login_username">
			<requestFocus></requestFocus>
		</EditText>
		<TextView android:layout_width="wrap_content"
			android:textSize="16dp" android:textColor="@color/black"
			android:layout_height="wrap_content" android:id="@+id/login_password"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/login_password"></TextView>
		<EditText android:layout_width="fill_parent"
			android:paddingLeft="10dp" android:paddingRight="10dp"
			android:layout_height="wrap_content" android:id="@+id/login_pass"
			android:background="@drawable/search_box" android:inputType="textPassword"></EditText>
	</LinearLayout>
	<LinearLayout android:id="@+id/linearLayout3"
		android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="center_horizontal">
		<Button android:layout_width="120dp" android:background="@drawable/button_small"
			android:layout_height="30dp" android:id="@+id/login_ok" android:text="@string/login_login"></Button>
		<Button android:layout_width="120dp" android:background="@drawable/button_small"
			android:layout_height="30dp" android:id="@+id/login_register"
			android:text="@string/login_register"></Button>
	</LinearLayout>
</LinearLayout>
